# Noah

./: .gitignore  README-zh.md  README.md
backend/: .env  .env.example  README.md  pyproject.toml
backend/scripts/: init_db.py
backend/src/: config.py  create_tables.py  crud.py  database.py  main.py  models.py  schemas.py  security.py
backend/src/routes/: admin.py  auth.py  categories.py  comments.py  likes.py  posts.py  tags.py
frontend/: README.md  index.html  package-lock.json  package.json
frontend/src/: App.vue  main.ts  style.scss
frontend/src/api/: index.js  index.ts
frontend/src/components/: Footer.vue  Header.vue  Navbar.vue
frontend/src/router/: index.js  index.ts
frontend/src/stores/: auth.js  user.ts
frontend/src/types/: index.ts
frontend/src/views/: Admin.vue  AdminCategories.vue  AdminPosts.vue  AdminTags.vue  CreatePost.vue  EditPost.vue  Home.vue  Login.vue  PostDetail.vue  Register.vue
frontend/src/views/admin/: Admin.vue  Categories.vue  Comments.vue  CreatePost.vue  Dashboard.vue  EditPost.vue  Posts.vue  Tags.vue
