[project]
name = "blog-backend"
version = "0.1.0"
description = "FastAPI backend for blog system"
requires-python = ">=3.10"

[project.dependencies]
fastapi = "^0.109.0"
uvicorn = "^0.27.0"
sqlalchemy = "^2.0.23"
asyncpg = "^0.29.0"
python-jose = "^3.3.0"
passlib = "^1.7.4"
bcrypt = "^4.0.1"
pydantic = "^2.5.2"
python-dotenv = "^1.0.0"

[tool.uv]
extras = ["standard"]

[scripts]
start = "uvicorn src.main:app --reload --host 0.0.0.0 --port 8000"
