[project]
name = "backend"
version = "0.1.0"
description = "FastAPI backend for blog system"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "asyncpg>=0.31.0",
    "bcrypt==4.1.2",
    "email-validator>=2.3.0",
    "fastapi>=0.136.1",
    "passlib>=1.7.4",
    "pydantic-settings>=2.14.0",
    "python-dotenv>=1.2.2",
    "python-jose>=3.5.0",
    "python-multipart>=0.0.27",
    "sqlalchemy>=2.0.49",
    "uvicorn>=0.46.0",
]

[tool.uv]
extras = ["standard"]

[project.scripts]
start = "uvicorn src.main:app --reload --host 0.0.0.0 --port 8000"